src/eval/snapshots/monkey_language_server__eval__test__good_bang_prefix_7.snap
---
source: src/eval/test.rs
description: "let x = !{1: true, 2: false}[1];"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Pos(Bool, (0,0)->(0,32)),
        ),
    ],
    refs: [
        Pos("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,32)",
    parent_range: None,
    children: [],
}

========================

[]
