src/eval/snapshots/monkey_language_server__eval__test__good_minus_prefix_1.snap
---
source: src/eval/test.rs
description: let x = -12;
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Value(Int, (0,4)->(0,5), (0,0)->(0,12)),
        ),
    ],
    refs: [
        Pos("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,12)",
    parent_range: None,
    children: [],
}

========================

[]
