src/eval/snapshots/monkey_language_server__eval__test__hash_syntax_err.snap
---
source: src/eval/test.rs
description: "let x = {1: \"foo, \"a\": 2};"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [],
    refs: [],
    scope_range: "(0,0)->(0,26)",
    parent_range: None,
    children: [],
}

========================

[
    Error(ExpectedTokenNotFound("}"), (0,20)->(0,26)),
]
