src/eval/snapshots/monkey_language_server__eval__test__if_bad_consq_expr.snap
---
source: src/eval/test.rs
description: "if (true) { @ }"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [],
    refs: [],
    scope_range: "(0,0)->(0,15)",
    parent_range: None,
    children: [],
}

========================

[
    Warning(UnusedExpression, (0,0)->(0,2)),
    Error(UnexpectedToken("@"), (0,12)->(0,13)),
]
