src/eval/snapshots/monkey_language_server__eval__test__if_condition_not_bool.snap
---
source: src/eval/test.rs
description: "let x = if (1) { 1 } else { 2 };"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Spanned(Unknown, (0,4)->(0,5)),
        ),
    ],
    refs: [
        Spanned("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,32)",
    parent_range: None,
    children: [
        Environment {
            store: [],
            refs: [],
            scope_range: "(0,15)->(0,19)",
            parent_range: Some(
                "(0,0)->(0,32)",
            ),
            children: [],
        },
        Environment {
            store: [],
            refs: [],
            scope_range: "(0,26)->(0,30)",
            parent_range: Some(
                "(0,0)->(0,32)",
            ),
            children: [],
        },
    ],
}

========================

[]
