src/eval/snapshots/monkey_language_server__eval__test__int_add.snap
---
source: src/eval/test.rs
description: let x = 1 + 1;
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        Value("x", Int, (0,4)->(0,5), (0,0)->(0,14)),
    ],
    refs: [
        Pos("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,14)",
    parent_range: None,
    children: [],
}

========================

[]
