src/eval/snapshots/monkey_language_server__eval__test__int_bang.snap
---
source: src/eval/test.rs
description: let x = 1 ! 1;
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [],
    refs: [],
    parent_id: None,
    children: [],
    id: 0,
}

========================

[
    Error(ExpectedTokenNotFound(";"), (0,10)->(0,11)),
]
